adjust text-shadows, fixed ordering of tasks, fixed z-index for healthbar text

--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -62,7 +62,7 @@ footer {
     background-size: 0% 100%;
     background-position-x: right;
     transition: background-size 400ms;
-    text-shadow: 0 0 10px black;
+    text-shadow: var(--text-shadow);
 }
 
 .email-btn-submit:hover {
