--- a/src/main/resources/static/css/registration.css
+++ b/src/main/resources/static/css/registration.css
@@ -67,7 +67,7 @@
     background-size: 0 100%;
     background-position-x: right;
     transition: background-size 400ms;
-    text-shadow: 0 0 10px black;
+    text-shadow: var(--text-shadow);
 }
 
 .login-register-Btn:hover {
